    * 4343 FIX: apt: Fixed wrong state information of pending updates of normal and security updates...
    * 4344 FIX: lnx_quota: Fixed wrong value calculation and removed performance data...
            NOTE: Please refer to the migration notes!

    Multisite:
    * 4315 FIX: Logwatch problematic logfiles list was showing too many logfiles


1.2.8p16:
    Core & Setup:
    * 4281 FIX: Fixed piggyback hosts with spaces in names leading to crashes...

    Checks & Agents:
    * 3896 FIX: Agent RPMs: Fixing dependency issue with old check_mk-agent-oracle-*.rpm and check_mk-agent-logwatch-*.rpm
    * 4172 FIX: smart.temp: fixed discovery and check function...
    * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
    * 4207 FIX: mk_jolokia: Use configured port as default instance name...
            NOTE: Please refer to the migration notes!
    * 4174 FIX: added missing perfometer for interface services
    * 4119 FIX: check_mk_agent.solaris: fixed run_cached function...
    * 4209 FIX: mk_jolokia: Setting a default product now works...
    * 4120 FIX: fixed checks mysql and mysql.sessions for multiple MySQL instances...
    * 4121 FIX: mk_mysql: fixed handling of multiple instances
    * 4122 FIX: ibm_svc_enclosure: added support for firmware >= 7.8...
    * 4182 FIX: mysql_slave: fixed crash if agent output is empty...
    * 4183 FIX: ibm_imm_fan: Fixed crash if fan speed is "unavailable"...
    * 4184 FIX: hivemanager_devices: Fixed bug if device is up for more than 1 year...
    * 4259 FIX: aix_sap_processlist: fixed ValueError; if process has stopped and does not report any start time
    * 4260 FIX: db2_logsizes: removed pprint statement
    * 4261 FIX: db2_logsizes: fixed wrong discovery condition
    * 4262 FIX: wmi_cpuload: fixed missing section handling...
    * 4263 FIX: oracle_crs_res: fixed UnboundLocalError; 'crs_nodename' referenced before assignment...