@@ -20,6 +20,9 @@
     Multisite:
     * 4315 FIX: Logwatch problematic logfiles list was showing too many logfiles
 
+    WATO:
+    * 4337 FIX: logwatch: fixed redundant master url in single site environment and added master url prefix if configured in master site
+
 
 1.2.8p16:
     Core & Setup:
